# secure-login-api

./: .gitignore  Cargo.toml  README.md  diesel.toml  docker-compose.yml  env.sample
config/: postgresql.conf
initdb/: 0001-dev-user-creation.sql
migrations/2025-11-19-074134_users/: down.sql  up.sql
src/: auth.rs  db_service.rs  handler.rs  main.rs  model.rs  password_helper.rs  schema.rs
