[package]
name = "secure-login-api"
description = "backend api for login functionality powered by actix-web framework"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.0"
diesel = {version = "2.3.3", features = ["r2d2", "postgres", "uuid"]}
dotenv = "0.15.0"
env_logger = "0.11.8"
r2d2 = "0.8.10"
serde = {version = "1.0.228", features = ["derive"]}
log = "0.4.28"
jsonwebtoken = "10.2.0"
actix-cors = "0.7.1"
sha2 = "0.11.0-rc.3"
hex = "0.4.3"
chrono = "0.4.42"
argon2 = {version = "0.5.3", features = ["std"]}
rand_core = "0.6.4"
regex = "1.12.2"
uuid = {version = "1.18.1", features = ["v7"]}
once_cell = "1.21.3"